# MEC_Resource_Pre_Allocation_Algorithm

./: .gitignore  CMakeLists.txt  Formulation Plan.txt  README.md  applications_file.txt  input_application_format.txt  input_applications.txt  input_new.txt  main.cpp  main.h  output_sol
Constants/: AlgorithmModeFlags.h  GeneralConstants.h  PreallocationConstants.h  ReactiveConstants.h
Constants/AlgorithmFlag/: AlgorithmFlag.cpp  AlgorithmFlag.h
Constants/AlgorithmMode/: AlgorithmMode.cpp  AlgorithmMode.h
Graph/: Graph.cpp  Graph.h
Graph/EdgeData/: EdgeData.cpp  EdgeData.h
Model/ComputationNode/: ComputationNode.cpp  ComputationNode.h
Model/Task/: Task.cpp  Task.h
Model/TaskMapping/: TaskMapping.cpp  TaskMapping.h
Models/: NetworkVertexData.h  VertexData.h
Models/ComputationNode/: ComputationNode.cpp  ComputationNode.h
Models/EdgeNode/: EdgeNode.cpp  EdgeNode.h
Models/Mappings/: ReservationMapping.h  SuperNode.h  TaskMapping.h  TempTask.h
Models/MobileNode/: MobileNode.cpp  MobileNode.h
Models/Task/: Task.cpp  Task.h
Models/VertexData/: EdgePropertyData.h  NetworkVertexData.h  TaskVertexData.h
Services/AlgorithmServices/: AlgorithmServices.cpp  AlgorithmServices.h
Services/ApplicationGraph/: ApplicationGraph.cpp  ApplicationGraph.h
Services/ApplicationTopologyServices/: ApplicationTopologyServices.cpp  ApplicationTopologyServices.h
Services/FileReader/: FileReader.cpp  FileReader.h
Services/NetworkTopologyServices/: NetworkTopologyServices.cpp  NetworkTopologyServices.h
Services/PartitionFunctions/: PartitionFunctions.cpp  PartitionFunctions.h
Services/PreallocationFunctions/: PreallocationFunctions.cpp  PreallocationFunctions.h
Services/SimulatorServices/: SimulatorFunctions.cpp  SimulatorFunctions.h  SimulatorServices.cpp  SimulatorServices.h
Services/SimulatorTopologyServices/: SimulatorFunctions.cpp  SimulatorFunctions.h
enums/: AlgorithmTypes.h  MappingType.h  NodeTypes.h  ProcessingTypes.h  TaskStates.h
utils/FileReader/: FileReader.cpp  FileReader.h
utils/HelperFunctions/: HelperFunctions.cpp  HelperFunctions.h
utils/JsonOutputFunctions/: JsonOutputFunctions.cpp  JsonOutputFunctions.h
